--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,10 @@
 
 # production
 /build
-
+.firebase
+.firebaserc
+/database.rules.json
+/firebase.json
 # misc
 .DS_Store
 .env.local
@@ -22,7 +25,3 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-.firebase
-.firebaserc
-database.rules.json
-firebase.json
